igt@xe_exec_fault_mode@twice* - skip - Test requirement not met in function __igt_unique____real_main, file ../../../usr/src/igt-gpu-tools/tests/intel/xe_exec_fault_mode, Test requirement: xe_supports_faults(fd), Last errno: 22, Invalid argument
Stdout
Opened device: /dev/dri/card0
Test requirement not met in function __igt_unique____real_main323, file ../../../usr/src/igt-gpu-tools/tests/intel/xe_exec_fault_mode.c:385:
Test requirement: xe_supports_faults(fd)
Last errno: 22, Invalid argument
Subtest twice-userptr-imm: SKIP (0.000s)
Stderr
Subtest twice-userptr-imm: SKIP (0.000s)
Dmesg
<6> [1184.972524] [IGT] xe_exec_fault_mode: executing
<7> [1184.986985] xe 0000:aa:00.0: [drm:xe_vm_create_ioctl [xe]] Ioctl argument check failed at drivers/gpu/drm/xe/xe_vm.c:1958: !(args->flags & DRM_XE_VM_CREATE_FLAG_LR_MODE) && args->flags & DRM_XE_VM_CREATE_FLAG_FAULT_MODE
<6> [1184.990000] [IGT] xe_exec_fault_mode: exiting, ret=77