lib/xe_query: Fix xe_supports_faults()

In recent uAPI changes, it was missed that setting VM_CREATE_FLAG_FAULT_MODE
requires VM_CREATE_FLAG_LR_MODE in this query routine.

Fixes: dc71419700 (tests/intel/xe: Adjust to KMD uAPI changes for long-running VMs)
Closes: https://gitlab.freedesktop.org/drm/xe/kernel/-/issues/997
Signed-off-by: Brian Welty <brian.welty@intel.com>
Reviewed-by: Matthew Brost <matthew.brost@intel.com>